[DO NOT LAND] Make VirtualFree(DECOMMIT) failure fatal to diagnose

Bug: 747657
Change-Id: I2f1c8abaa531a3c225228dd7f9695eacbd7f9e5a