base/memory/memory_pressure_monitor_win.cc
@@ -195,6 +195,9 @@ MemoryPressureMonitor::CalculateCurrentPressureLevel() {
   // How much system memory is actively available for use right now, in MBs.
   int phys_free = static_cast<int>(mem_status.ullAvailPhys / kMBBytes);
 
+  // WEZ: Fake continuous critical pressure.
+  phys_free = critical_threshold_mb_ - 1;
+
   // TODO(chrisha): This should eventually care about address space pressure,
   // but the browser process (where this is running) effectively never runs out
   // of address space. Renderers occasionally do, but it does them no good to
